feat: modernize Hero section with contemporary UI/UX trends
Major improvements:
- Added animated gradient background with floating blobs
- Enhanced typography with gradient text effect on name
- Added greeting badge with glassmorphism effect
- Improved CTA buttons with primary/secondary styles and hover animations
- Added description text for better context
- Implemented scroll indicator with animated mouse icon
- Added typing cursor animation for specialization
- Smooth fade-in animations with staggered timing

Modern UI/UX features:
- Gradient backgrounds with blur effects (trendy glassmorphism)
- Animated floating gradient orbs for visual interest
- Large, bold typography with gradient text
- Dual CTA buttons (primary action + secondary contact)
- Micro-interactions on hover (button lift, icon slide)
- Scroll indicator for better UX guidance
- Responsive design with mobile-first approach
- Dark theme support with adjusted opacity

Animations:
- Fade-in-up for main content
- Slide-in-left for name
- Floating animation for background gradients
- Blinking cursor effect
- Scroll wheel animation
- Button hover shine effect

All animations are performance-optimized and respect user preferences.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,11 @@
   "hero": {
     "name": "Your Name",
     "specialization": "Web Developer",
-    "cta": "View Projects"
+    "description": "Creating modern web applications with focus on user experience",
+    "greeting": "Hello",
+    "cta": "View Projects",
+    "contact": "Get In Touch",
+    "scroll": "Scroll Down"
   },
   "about": {
     "title": "About Me",
