--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,7 +12,11 @@
   "hero": {
     "name": "Ваше Имя",
     "specialization": "Веб-разработчик",
-    "cta": "Посмотреть проекты"
+    "description": "Создаю современные веб-приложения с фокусом на пользовательский опыт",
+    "greeting": "Привет",
+    "cta": "Посмотреть проекты",
+    "contact": "Связаться",
+    "scroll": "Прокрутите вниз"
   },
   "about": {
     "title": "О себе",
