refactor: simplify Hero section and fix alignment issues
Changes:
- Removed gradient background (now uses standard background like other sections)
- Removed greeting badge
- Fixed center alignment for all content on desktop
- Fixed cursor UI issue (removed duplicate lines, proper spacing)
- Updated text content:
  * Name: 'Меня зовут Николай Дудин' / 'My name is Nikolay Dudin'
  * Specialization: 'Я Веб-разработчик из города Москвы' / 'I am a Web Developer from Moscow'
- Kept CTA buttons, contact link, and scroll indicator unchanged
- Improved cursor styling with proper width and spacing
- Ensured all content is centered on all screen sizes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,10 +10,8 @@
     }
   },
   "hero": {
-    "name": "Your Name",
-    "specialization": "Web Developer",
-    "description": "Creating modern web applications with focus on user experience",
-    "greeting": "Hello",
+    "name": "My name is Nikolay Dudin",
+    "specialization": "I am a Web Developer from Moscow",
     "cta": "View Projects",
     "contact": "Get In Touch",
     "scroll": "Scroll Down"
