--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -10,10 +10,8 @@
     }
   },
   "hero": {
-    "name": "Ваше Имя",
-    "specialization": "Веб-разработчик",
-    "description": "Создаю современные веб-приложения с фокусом на пользовательский опыт",
-    "greeting": "Привет",
+    "name": "Меня зовут Николай Дудин",
+    "specialization": "Я Веб-разработчик из города Москвы",
     "cta": "Посмотреть проекты",
     "contact": "Связаться",
     "scroll": "Прокрутите вниз"
