feat: implement modern projects section with enhanced UX and performance
Complete redesign of Projects component according to specification:

Structure improvements:
- Added semantic HTML with header, nav, article elements
- Implemented ARIA attributes for accessibility (aria-label, aria-pressed, role)
- Made entire card clickable with proper link structure
- Added image wrapper with 16:9 aspect ratio container

Visual enhancements:
- Added overlay gradient on hover for better text readability
- Implemented smooth hover effects (card lift, image scale, content shift)
- Enhanced shadows with primary color tint (rgba(31, 166, 160, 0.3))
- Added focus-visible states for keyboard navigation
- Touch-friendly active states for mobile

Content additions:
- Added project role field (Front-end Developer, UI/UX Designer, etc.)
- Implemented technology tags with modern styling
- Added subtitle to section header
- Responsive images with srcset for different screen sizes

Performance optimizations:
- Intersection Observer for lazy loading images
- Will-change optimization for smooth animations
- Explicit image dimensions to prevent CLS
- Smooth filter transitions with opacity animation
- Event delegation for better performance

Accessibility (A11y):
- ARIA roles and labels throughout
- Keyboard navigation support (Enter/Space for filters)
- Focus-visible states
- Screen reader optimization
- Reduced motion support

Responsive design:
- Mobile: 1 column
- Tablet: 2 columns
- Desktop: 3 columns
- Proper gap spacing for all breakpoints

Localization:
- Added new translation keys (subtitle, role, technologies, filterLabel, gridLabel)
- Updated both ru.json and en.json

Code quality:
- Clean, maintainable structure
- Proper error handling
- Performance-optimized event listeners
- Modern ES6+ syntax

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,7 +22,13 @@
     "skills": "Skills"
   },
   "projects": {
-    "title": "Projects",
+    "title": "My Projects",
+    "subtitle": "Best works reflecting my approach",
+    "filterLabel": "Project filter",
+    "gridLabel": "Projects list",
+    "role": "Role",
+    "technologies": "Technologies",
+    "items": "projects",
     "filter": {
       "all": "All",
       "ui": "UI",
