--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,7 +22,13 @@
     "skills": "Навыки"
   },
   "projects": {
-    "title": "Проекты",
+    "title": "Мои проекты",
+    "subtitle": "Лучшие работы, отражающие мой подход",
+    "filterLabel": "Фильтр проектов",
+    "gridLabel": "Список проектов",
+    "role": "Роль",
+    "technologies": "Технологии",
+    "items": "проектов",
     "filter": {
       "all": "Все",
       "ui": "UI",
