--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -18,7 +18,7 @@
   },
   "about": {
     "title": "О себе",
-    "description": "Описание о себе и опыте работы",
+    "description": "Web-разработчик полного цикла с опытом создания адаптивных веб-приложений и сайтов «под ключ». Специализируюсь на Frontend-разработке, оптимизации производительности и SEO. Использую современные инструменты и AI-ассистенты для повышения эффективности разработки.",
     "skills": "Навыки"
   },
   "projects": {
@@ -46,8 +46,12 @@
       "name": "Имя",
       "email": "Email",
       "message": "Сообщение",
-      "submit": "Отправить"
+      "submit": "Отправить",
+      "success": "Сообщение отправлено! Я свяжусь с вами в ближайшее время.",
+      "error": "Произошла ошибка. Пожалуйста, попробуйте позже или свяжитесь напрямую."
     },
-    "social": "Социальные сети"
+    "social": "Социальные сети",
+    "phone": "Телефон",
+    "email": "Email"
   }
 }
