feat: add translations for projects and testimonials UI
Added translations for:
- Project cards: title, role, description now translate based on language
- Testimonials: empty state, loading, error messages
- Projects: empty state, loading, error messages, preview alt text
- Testimonials: prev/next buttons aria-labels, dot navigation

Improvements:
- Added project translations in JSON files (ru/en) for existing projects
- Added getObject() method to i18n for accessing nested translation objects
- Components now reload on language change
- Centered empty state messages for projects and testimonials

Fixed:
- testimonials__empty and projects__empty now centered with text-align: center
- All UI text now properly translates when language changes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,10 +35,37 @@
       "web": "Web",
       "branding": "Branding"
     },
-    "viewProject": "View Project"
+    "viewProject": "View Project",
+    "loading": "Loading projects...",
+    "empty": "No projects yet",
+    "error": "Error loading projects",
+    "preview": "Project preview",
+    "translations": {
+      "Точка GG": {
+        "title": "Point GG",
+        "role": "Full-stack Developer",
+        "description": "WordPress theme development from scratch, SEO optimization and performance improvement"
+      },
+      "Приз Бокс": {
+        "title": "Prize Box",
+        "role": "Full-stack Developer",
+        "description": "Telegram bot with personal account, rating system and admin panel"
+      },
+      "Welcome to Day": {
+        "title": "Welcome to Day",
+        "role": "Full-stack Developer",
+        "description": "Interactive invitations catalog with application forms, promo codes and notifications"
+      }
+    }
   },
   "testimonials": {
-    "title": "Testimonials"
+    "title": "Testimonials",
+    "loading": "Loading testimonials...",
+    "empty": "No testimonials yet",
+    "error": "Error loading testimonials",
+    "prev": "Previous testimonial",
+    "next": "Next testimonial",
+    "goTo": "Go to testimonial"
   },
   "contact": {
     "title": "Get In Touch",
