--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -35,10 +35,37 @@
       "web": "Web",
       "branding": "Branding"
     },
-    "viewProject": "Посмотреть проект"
+    "viewProject": "Посмотреть проект",
+    "loading": "Загрузка проектов...",
+    "empty": "Проектов пока нет",
+    "error": "Ошибка загрузки проектов",
+    "preview": "Превью проекта",
+    "translations": {
+      "Точка GG": {
+        "title": "Точка GG",
+        "role": "Full-stack Developer",
+        "description": "Разработка WordPress-темы с нуля, SEO-оптимизация и улучшение производительности"
+      },
+      "Приз Бокс": {
+        "title": "Приз Бокс",
+        "role": "Full-stack Developer",
+        "description": "Telegram-бот с личным кабинетом, рейтингом и админ-панелью"
+      },
+      "Welcome to Day": {
+        "title": "Welcome to Day",
+        "role": "Full-stack Developer",
+        "description": "Каталог интерактивных приглашений с формами заявок, промокодами и уведомлениями"
+      }
+    }
   },
   "testimonials": {
-    "title": "Отзывы"
+    "title": "Отзывы",
+    "loading": "Загрузка отзывов...",
+    "empty": "Отзывов пока нет",
+    "error": "Ошибка загрузки отзывов",
+    "prev": "Предыдущий отзыв",
+    "next": "Следующий отзыв",
+    "goTo": "Перейти к отзыву"
   },
   "contact": {
     "title": "Связаться со мной",
