fix: make message optional and add Telegram username field to contact form
Fixed contact form validation:
- Made message field optional (removed required attribute)
- Added optional Telegram username field with validation
- Fixed API validation to handle empty message gracefully
- Added proper error handling for missing fields
- Added translations for telegram and optional labels
- Added styling for optional field indicator

API changes:
- Message is now optional (no minimum length if empty)
- Added Telegram username validation (5-32 chars, alphanumeric + underscore)
- Telegram username is included in notifications if provided
- Better error messages for validation failures

Frontend changes:
- Removed required attribute from message textarea
- Added Telegram input field with placeholder
- Added (optional) indicator for non-required fields
- Clean empty fields before submission

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,7 +72,9 @@
     "form": {
       "name": "Name",
       "email": "Email",
+      "telegram": "Telegram",
       "message": "Message",
+      "optional": "optional",
       "submit": "Send",
       "success": "Message sent! I'll get back to you soon.",
       "error": "An error occurred. Please try again later or contact me directly."
