--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -72,7 +72,9 @@
     "form": {
       "name": "Имя",
       "email": "Email",
+      "telegram": "Telegram",
       "message": "Сообщение",
+      "optional": "необязательно",
       "submit": "Отправить",
       "success": "Сообщение отправлено! Я свяжусь с вами в ближайшее время.",
       "error": "Произошла ошибка. Пожалуйста, попробуйте позже или свяжитесь напрямую."
