feat: add 'Leave a Review' button in Testimonials section
- Added prominent button to leave feedback in Testimonials section
- Button links to /testimonial-form.html
- Styled with hover effects and proper accessibility
- Added translations for Russian and English
- Improves user experience by making feedback form easily accessible

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,7 +65,8 @@
     "error": "Error loading testimonials",
     "prev": "Previous testimonial",
     "next": "Next testimonial",
-    "goTo": "Go to testimonial"
+    "goTo": "Go to testimonial",
+    "leaveFeedback": "Leave a Review"
   },
   "contact": {
     "title": "Get In Touch",
