--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -65,7 +65,8 @@
     "error": "Ошибка загрузки отзывов",
     "prev": "Предыдущий отзыв",
     "next": "Следующий отзыв",
-    "goTo": "Перейти к отзыву"
+    "goTo": "Перейти к отзыву",
+    "leaveFeedback": "Оставить отзыв"
   },
   "contact": {
     "title": "Связаться со мной",
