feat: add consent checkbox for personal data processing in contact form
- Added required consent checkbox before submit button
- Checkbox validates user agreement to process personal data and contact via specified channels
- Added validation on both frontend (JavaScript) and backend (PHP API)
- Added translations for consent text in Russian and English
- Styled checkbox with proper spacing and accessibility (focus states)
- Form cannot be submitted without consent

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,6 +76,8 @@
       "telegram": "Telegram",
       "message": "Message",
       "optional": "optional",
+      "consent": "I agree to the processing of personal data and confirm that I can be contacted via the specified communication channels",
+      "consentRequired": "You must agree to the processing of personal data",
       "submit": "Send",
       "success": "Message sent! I'll get back to you soon.",
       "error": "An error occurred. Please try again later or contact me directly."
