--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -76,6 +76,8 @@
       "telegram": "Telegram",
       "message": "Сообщение",
       "optional": "необязательно",
+      "consent": "Я согласен(а) на обработку персональных данных и подтверждаю, что могу быть связан(а) по указанным каналам связи",
+      "consentRequired": "Необходимо дать согласие на обработку персональных данных",
       "submit": "Отправить",
       "success": "Сообщение отправлено! Я свяжусь с вами в ближайшее время.",
       "error": "Произошла ошибка. Пожалуйста, попробуйте позже или свяжитесь напрямую."
