--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -76,7 +76,7 @@
       "telegram": "Telegram",
       "message": "Сообщение",
       "optional": "необязательно",
-      "consent": "Я согласен(а) на обработку персональных данных и подтверждаю, что могу быть связан(а) по указанным каналам связи",
+      "consent": "Я согласен(а) с <a href=\"/privacy-policy.html\">политикой конфиденциальности</a> и даю <a href=\"/personal-data-consent.html\">согласие на обработку персональных данных</a>",
       "consentRequired": "Необходимо дать согласие на обработку персональных данных",
       "submit": "Отправить",
       "success": "Сообщение отправлено! Я свяжусь с вами в ближайшее время.",
@@ -85,5 +85,59 @@
     "social": "Социальные сети",
     "phone": "Телефон",
     "email": "Email"
+  },
+  "privacyPolicy": {
+    "title": "Политика конфиденциальности",
+    "lastUpdated": "Последнее обновление",
+    "backToHome": "Вернуться на главную",
+    "section1": {
+      "title": "1. Общие положения",
+      "content": "Настоящая Политика конфиденциальности определяет порядок обработки и защиты персональных данных пользователей сайта портфолио (далее — Сайт). Используя Сайт, вы соглашаетесь с условиями настоящей Политики конфиденциальности."
+    },
+    "section2": {
+      "title": "2. Собираемая информация",
+      "content": "При использовании Сайта мы можем собирать следующую информацию: имя, адрес электронной почты, номер телефона, Telegram username (при указании), а также любую другую информацию, которую вы добровольно предоставляете через форму обратной связи."
+    },
+    "section3": {
+      "title": "3. Использование информации",
+      "content": "Собранная информация используется исключительно для связи с вами по указанным каналам связи (email, Telegram) в ответ на ваши запросы и сообщения. Мы не передаем ваши персональные данные третьим лицам без вашего согласия."
+    },
+    "section4": {
+      "title": "4. Защита данных",
+      "content": "Мы принимаем необходимые меры для защиты ваших персональных данных от несанкционированного доступа, изменения, раскрытия или уничтожения. Однако ни один метод передачи данных через Интернет не является абсолютно безопасным."
+    },
+    "section5": {
+      "title": "5. Cookies",
+      "content": "Сайт может использовать файлы cookie для улучшения пользовательского опыта. Вы можете настроить свой браузер для отказа от файлов cookie, однако это может повлиять на функциональность сайта."
+    },
+    "section6": {
+      "title": "6. Изменения в Политике конфиденциальности",
+      "content": "Мы оставляем за собой право вносить изменения в настоящую Политику конфиденциальности. Рекомендуем периодически просматривать эту страницу для ознакомления с актуальной информацией."
+    }
+  },
+  "personalDataConsent": {
+    "title": "Согласие на обработку персональных данных",
+    "lastUpdated": "Последнее обновление",
+    "backToHome": "Вернуться на главную",
+    "section1": {
+      "title": "1. Согласие на обработку персональных данных",
+      "content": "Настоящим я даю свое согласие на обработку моих персональных данных, указанных в форме обратной связи на сайте портфолио, включая сбор, систематизацию, накопление, хранение, уточнение (обновление, изменение), использование, передачу (предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных данных."
+    },
+    "section2": {
+      "title": "2. Цель обработки персональных данных",
+      "content": "Обработка персональных данных осуществляется в целях связи со мной по указанным каналам связи (email, Telegram) для ответа на мои запросы и сообщения, а также для предоставления информации о предоставляемых услугах."
+    },
+    "section3": {
+      "title": "3. Перечень обрабатываемых персональных данных",
+      "content": "Обрабатываются следующие персональные данные: имя, адрес электронной почты, номер телефона (при указании), Telegram username (при указании), текст сообщения (при указании)."
+    },
+    "section4": {
+      "title": "4. Срок действия согласия",
+      "content": "Согласие действует до момента его отзыва путем направления соответствующего уведомления на адрес электронной почты, указанный на сайте."
+    },
+    "section5": {
+      "title": "5. Права субъекта персональных данных",
+      "content": "Я осведомлен(а) о том, что имею право отозвать согласие на обработку персональных данных, а также право на доступ, исправление, удаление и ограничение обработки моих персональных данных."
+    }
   }
 }
