--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -139,5 +139,31 @@
       "title": "5. Права субъекта персональных данных",
       "content": "Я осведомлен(а) о том, что имею право отозвать согласие на обработку персональных данных, а также право на доступ, исправление, удаление и ограничение обработки моих персональных данных."
     }
+  },
+  "testimonialForm": {
+    "title": "Оставить отзыв",
+    "subtitle": "Ваше мнение очень важно для меня. Поделитесь своим опытом работы со мной.",
+    "toggleTheme": "Переключить тему",
+    "form": {
+      "name": "Ваше имя",
+      "position": "Должность",
+      "company": "Компания",
+      "message": "Ваш отзыв",
+      "messagePlaceholder": "Расскажите о вашем опыте работы...",
+      "photo": "Ваша фотография (опционально)",
+      "photoPreview": "Превью фото",
+      "removePhoto": "Удалить фото",
+      "fileHint": "Форматы: JPG, PNG, WebP. Максимальный размер: 5 МБ",
+      "submit": "Отправить отзыв",
+      "submitting": "Отправка...",
+      "success": "Спасибо! Ваш отзыв отправлен на модерацию."
+    },
+    "errors": {
+      "nameMin": "Имя должно содержать минимум 2 символа",
+      "messageMin": "Отзыв должен содержать минимум 10 символов",
+      "fileSize": "Размер файла не должен превышать 5 МБ",
+      "fileType": "Разрешены только изображения (JPG, PNG, WebP)",
+      "submitError": "Произошла ошибка при отправке отзыва. Пожалуйста, попробуйте позже."
+    }
   }
 }
