refactor: unify controls and add file input translations
- Combined language and theme toggles into single controls block with flex row
- Removed separate wrapper divs for toggles
- Added custom file input with translatable button text
- File input now shows translated 'Choose file' and 'No file chosen' text
- Added translations for fileSelect and fileNotSelected in ru/en locales
- Updated file input styling with custom label and button
- File name updates dynamically when file is selected
- Translations update when language changes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -153,6 +153,8 @@
       "photo": "Your photo (optional)",
       "photoPreview": "Photo preview",
       "removePhoto": "Remove photo",
+      "fileSelect": "Choose file",
+      "fileNotSelected": "No file chosen",
       "fileHint": "Formats: JPG, PNG, WebP. Maximum size: 5 MB",
       "submit": "Submit Review",
       "submitting": "Submitting...",
