fix: improve file input display on testimonial form for Russian language
- Added missing translations for fileSelect and fileNotSelected in ru.json
- Improved file input styles with better flex layout
- Added min-height and flex-shrink properties for proper alignment
- Fixed text overflow and alignment issues for Russian text

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -153,6 +153,8 @@
       "photo": "Ваша фотография (опционально)",
       "photoPreview": "Превью фото",
       "removePhoto": "Удалить фото",
+      "fileSelect": "Выбрать файл",
+      "fileNotSelected": "Файл не выбран",
       "fileHint": "Форматы: JPG, PNG, WebP. Максимальный размер: 5 МБ",
       "submit": "Отправить отзыв",
       "submitting": "Отправка...",
